<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/spacing_normal"
        android:paddingTop="@dimen/spacing_normal"
        android:paddingEnd="@dimen/spacing_normal"
        android:paddingBottom="@dimen/spacing_normal"
        tools:context=".ui.login.LoginActivity">

        <TextView
            android:id="@+id/welcome_title"
            style="@style/TextAppearance.SZTFR.WelcomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title_text" />

        <TextView
            android:id="@+id/welcome_description"
            style="@style/TextAppearance.SZTFR.WelcomeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/welcome_description_text" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large">

            <LinearLayout
                android:id="@+id/login_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- material.io/components/text-fields/android -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.SZTFR.TextInputLayout"
                    android:hint="@string/prompt_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_extra_small"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:text="@string/login_with_email"
                    android:textAllCaps="false"
                    android:textColor="@color/primaryDarkColor"
                    app:backgroundTint="@color/primaryExtraLightColor" />

                <com.shobhitpuri.custombuttons.GoogleSignInButton
                    android:id="@+id/google_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:text="@string/login_with_google" />

                <TextView
                    android:id="@+id/anonymous_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:autoLink="all"
                    android:linksClickable="false"
                    android:selectAllOnFocus="false"
                    android:text="@string/login_anonymous"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnPrimary" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingStart="@dimen/spacing_extra_extra_large"
                android:paddingTop="@dimen/spacing_extra_extra_large"
                android:paddingEnd="@dimen/spacing_extra_extra_large"
                android:paddingBottom="@dimen/spacing_extra_extra_large" />
        </FrameLayout>
    </LinearLayout>
</layout>