<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondaryColor"
        tools:context=".ui.info.InfoFragment"
        android:orientation="vertical"
        android:padding="@dimen/spacing_normal">

        <TextView
            android:id="@+id/about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_title"
            android:paddingBottom="@dimen/spacing_normal"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="15pt"
            android:textColor="@color/secondaryTextColor"
            />

        <TextView
            android:id="@+id/about_description"
            android:paddingTop="@dimen/spacing_small"
            android:paddingBottom="@dimen/spacing_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_description"
            android:textColor="@color/secondaryTextColor" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <GridLayout
                android:layout_gravity="center"
                android:columnCount="4"
                android:id="@+id/about_others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:items="@id/item_about_others"
                >
            </GridLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/about_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginEnd="@dimen/spacing_normal"
                android:text="@string/about_feedback"
                android:textColor="@color/secondaryTextColor" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_normal"
                android:textColor="@color/secondaryTextColor"
                app:backgroundTint="@color/secondaryColor"
                android:text="@string/about_feedback_btn"
                android:layout_toEndOf="@+id/about_feedback"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/about_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textStyle="italic"
            tools:text="v1.2.3"
            />

    </LinearLayout>
</layout>