<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="hr.sztfr.sztfr_android.ui.survey_details.SurveyDetailsViewModel" />
        <variable
            name="userFavorites"
            type="java.util.List&lt;String&gt;" />
    </data>

    <RelativeLayout
        android:id="@+id/results_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/detailsBackgroundColor">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/survey_results_details_go_back_btn"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_normal"
            tools:ignore="NotSibling">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/spacing_normal"
                android:paddingBottom="@dimen/spacing_normal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/survey_results_details_img_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingBottom="@dimen/spacing_normal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/survey_results_details_img"
                        android:layout_width="fill_parent"
                        android:layout_height="250dp"
                        android:scaleType="centerCrop"
                        app:imageUrl="@{viewModel.surveyModel.image}"
                        tools:src="@drawable/dummy"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/ShapeAppearance.SZTFR.RoundedCorners" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                        android:id="@+id/favorites_button"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="@dimen/spacing_normal"
                        app:cornerRadius="24dp"
                        tools:icon="@drawable/favorite"
                        app:item="@{viewModel.surveyModel}"
                        app:userFavorites="@{userFavorites}"
                        app:iconGravity="top"
                        app:iconTint="?attr/accentTextColor"
                        app:layout_constraintBottom_toBottomOf="@+id/survey_results_details_img"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/survey_results_details_img" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_results"
                    style="@style/TextAppearance.SZTFR.DetailsTitle"
                    />
                <TextView
                    android:id="@+id/survey_results_details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.surveyModel.title}"
                    tools:text="@string/survey_dummy_title"
                    style="@style/TextAppearance.SZTFR.DetailsTitle"
                    android:layout_marginTop="10dp" />


                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/survey_tag_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleLine="true"
                    android:layout_marginTop="20dp"/>

                <HorizontalScrollView
                    android:id="@+id/horizontal_scroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <LinearLayout
                        android:id="@+id/gallery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" />

                </HorizontalScrollView>



                <TextView
                    android:id="@+id/survey_results_details_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.surveyModel.description}"
                    tools:text="@string/dummy_description"
                    style="@style/TextAppearance.SZTFR.DetailsDescription"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>


        </ScrollView>

        <Button
            android:id="@+id/survey_results_details_go_back_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            style="@style/Widget.SZTFR.BottomBackButton"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>
</layout>